fixed footer color and alignment

--- a/src/App.css
+++ b/src/App.css
@@ -41,8 +41,10 @@ html {
   /* display: flex; */
   text-align: center;
   font-size: 30px;
-  margin-top: auto;
-  position: fixed;
+  /* margin-top: auto; */
+  /* position: fixed; */
+  margin-top: 100px;
+  position: relative;
   padding-top: 10;
   padding-bottom: 10;
   bottom: 0;
